--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,6 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,goland,go
 
-!libs/
-!include/
+!libs/**/*.dylib
+!libs/**/*.so
+!libs/**/*.dll
